# feudle

./: Cargo.toml  README.md  RUN.md  Rocket.toml
client/: Cargo.toml
client/src/: client.rs  feudle.rs  main.rs  word_list.rs
client/temp/: index.html
client/temp/js/: Keyboard.js  words.js
client/temp/static/: Keyboard.css  front.css  modal.css  ready.css  timer.css
resource/: Cargo.toml
resource/src/: lib.rs
server/: Cargo.toml
server/src/: main.rs  server.rs
shared/: Cargo.toml
shared/src/: lib.rs
src/: main.rs
